// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlsList should renders correctly with checkbox type 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFF",
        "flexDirection": "row",
        "maxWidth": "100%",
        "opacity": 1,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 4,
          "borderWidth": 2,
          "height": 20,
          "margin": 12,
          "width": 20,
        }
      }
      value="1"
    />
    <Text
      style={
        Array [
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFF",
        "flexDirection": "row",
        "maxWidth": "100%",
        "opacity": 1,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 4,
          "borderWidth": 2,
          "height": 20,
          "margin": 12,
          "width": 20,
        }
      }
      value="2"
    />
    <Text
      style={
        Array [
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`ControlsList should renders correctly with checkbox type and horizontal 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFF",
        "flexDirection": "row",
        "maxWidth": "100%",
        "opacity": 1,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 4,
          "borderWidth": 2,
          "height": 20,
          "margin": 12,
          "width": 20,
        }
      }
      value="1"
    />
    <Text
      style={
        Array [
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFF",
        "flexDirection": "row",
        "maxWidth": "100%",
        "opacity": 1,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 4,
          "borderWidth": 2,
          "height": 20,
          "margin": 12,
          "width": 20,
        }
      }
      value="2"
    />
    <Text
      style={
        Array [
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`ControlsList should renders correctly with checkbox type and single 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFF",
        "flexDirection": "row",
        "maxWidth": "100%",
        "opacity": 1,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 4,
          "borderWidth": 2,
          "height": 20,
          "margin": 12,
          "width": 20,
        }
      }
      value="1"
    />
    <Text
      style={
        Array [
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFF",
        "flexDirection": "row",
        "maxWidth": "100%",
        "opacity": 1,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 4,
          "borderWidth": 2,
          "height": 20,
          "margin": 12,
          "width": 20,
        }
      }
      value="2"
    />
    <Text
      style={
        Array [
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`ControlsList should renders correctly with radio type 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFF",
        "flexDirection": "row",
        "opacity": 1,
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "transparent",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 11,
          "borderWidth": 2,
          "justifyContent": "center",
          "margin": 12,
          "width": 22,
        }
      }
      value="1"
    />
    <Text
      style={
        Array [
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFF",
        "flexDirection": "row",
        "opacity": 1,
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "transparent",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 11,
          "borderWidth": 2,
          "justifyContent": "center",
          "margin": 12,
          "width": 22,
        }
      }
      value="2"
    />
    <Text
      style={
        Array [
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`ControlsList should renders correctly with radio type and horizontal 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFF",
        "flexDirection": "row",
        "opacity": 1,
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "transparent",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 11,
          "borderWidth": 2,
          "justifyContent": "center",
          "margin": 12,
          "width": 22,
        }
      }
      value="1"
    />
    <Text
      style={
        Array [
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFF",
        "flexDirection": "row",
        "opacity": 1,
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "transparent",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 11,
          "borderWidth": 2,
          "justifyContent": "center",
          "margin": 12,
          "width": 22,
        }
      }
      value="2"
    />
    <Text
      style={
        Array [
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`ControlsList should renders correctly with radio type and single 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFF",
        "flexDirection": "row",
        "opacity": 1,
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "transparent",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 11,
          "borderWidth": 2,
          "justifyContent": "center",
          "margin": 12,
          "width": 22,
        }
      }
      value="1"
    />
    <Text
      style={
        Array [
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFF",
        "flexDirection": "row",
        "opacity": 1,
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "transparent",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 11,
          "borderWidth": 2,
          "justifyContent": "center",
          "margin": 12,
          "width": 22,
        }
      }
      value="2"
    />
    <Text
      style={
        Array [
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
          },
          undefined,
        ]
      }
    >
      2
    </Text>
  </View>
</View>
`;
